--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "astro": "^4.1.1",
     "fuse.js": "^7.0.0",
     "github-slugger": "^2.0.0",
+    "markdown-it": "^14.0.0",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0",
+    "sanitize-html": "^2.11.0",
     "satori": "^0.10.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
