--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "@divriots/jampack": "^0.23.2",
     "@tailwindcss/typography": "^0.5.10",
     "@types/github-slugger": "^1.3.0",
+    "@types/markdown-it": "^13.0.7",
     "@types/react": "^18.2.47",
+    "@types/sanitize-html": "^2.9.5",
     "@typescript-eslint/parser": "^6.18.1",
     "astro-eslint-parser": "^0.16.0",
     "commitizen": "^4.3.0",
